# dja

./: README.md  pyproject.toml  requirements.txt  setup.cfg
dja/: registry.py  relations.py  views.py
dja/filters/: base.py  fields.py  filter.py  include.py  page.py  sort.py
dja/serializers/: resource.py
dja/serializers/querystring/: base.py  fields.py  filter.py  include.py  page.py  sort.py
tests/: test_dja.py
